--- a/src/apps/schedule/templates/schedule/show_audience.html
+++ b/src/apps/schedule/templates/schedule/show_audience.html
@@ -5,8 +5,8 @@
     {% for time, time_name, floors in periods %}
       <div class="panel panel-default
                   {% if time < now %} period-closed
-                  {% elif time > now %} period-open
-                  {% else %} period-now{% endif %}">
+                  {% elif time == now %} period-now
+                  {% else %} period-open {% endif %}">
         <div class="panel-heading">{{ time_name }}</div>
 
         <ul class="list-group">
