--- a/src/apps/schedule/templates/schedule/show_audience.html
+++ b/src/apps/schedule/templates/schedule/show_audience.html
@@ -4,7 +4,7 @@
   <div>
     {% for time, time_name, floors in periods %}
       <div class="panel panel-default
-                  {% if time < now %} period-closed
+                  {% if time < now %} period-close
                   {% elif time == now %} period-now
                   {% else %} period-open {% endif %}">
         <div class="panel-heading">{{ time_name }}</div>
