add last update

--- a/src/apps/schedule/templates/schedule/show_audience.html
+++ b/src/apps/schedule/templates/schedule/show_audience.html
@@ -4,7 +4,7 @@
   <div>
     {% if was_updated %}
       <div class="alert alert-info" role="alert">
-        <strong>Info:</strong> database was updated.
+        <strong>Info:</strong> база обновлена.
       </div>
     {% endif %}
     {% for time, time_name, floors in periods %}
